# nexus-processor

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml  tests-and-build.yml
docs/: event-replay.md  parquet-structure.md  performance-analysis-parquet-vs-tiled.md
lakehouse_scripts/: ingest_neutron_data.py  init_neutron_data.py
scripts/: extract_events_by_time.py  init_iceberg_tables.py  mantid_events_by_time.py  neutron_lakehouse_init_tables.py  replay_events.py  spark_events_by_time.py  spark_events_by_time_parquet.py  spark_replay_events.py
src/nexus_processor/: cli.py  mantid.py  parquet.py  schemas.py
tests/: __init__.py  test_cli.py  test_mantid.py  test_parquet.py
